[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/directional_light.gd" type="Script" id=1]
[ext_resource path="res://Default/env.tres" type="Environment" id=2]
[ext_resource path="res://ui/minimap/minimap.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/3d/3d_gui.tscn" type="PackedScene" id=4]
[ext_resource path="res://misc/cameras/camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/ground/ground.tscn" type="PackedScene" id=6]
[ext_resource path="res://particles/stars/stars_layer_1.tscn" type="PackedScene" id=7]
[ext_resource path="res://particles/stars/stars_layer_2.tscn" type="PackedScene" id=8]
[ext_resource path="res://particles/fog.tscn" type="PackedScene" id=9]
[ext_resource path="res://images/fog.png" type="Texture" id=10]
[ext_resource path="res://models/planet_0/render.png" type="Texture" id=11]
[ext_resource path="res://environment/planet_1/planet.tscn" type="PackedScene" id=12]
[ext_resource path="res://misc/world/world.gd" type="Script" id=13]
[ext_resource path="res://entities/enemy/enemy_03_flying_saucer/enemy_03_flying_saucer.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/enemy/enemy_02_jellyfish/scenes/enemy_02_jellyfish.tscn" type="PackedScene" id=15]
[ext_resource path="res://entities/spaceship/player.tscn" type="PackedScene" id=16]
[ext_resource path="res://misc/spawners/enemy_spawner.tscn" type="PackedScene" id=17]
[ext_resource path="res://misc/pools/laser_pool/laser_pool.tscn" type="PackedScene" id=18]
[ext_resource path="res://entities/projectiles/projectile_0_laser/projectile_0_laser.tscn" type="PackedScene" id=19]
[ext_resource path="res://misc/pools/projectile02_electric_bolt_pool/projectile02_electric_bolt_pool.tscn" type="PackedScene" id=20]
[ext_resource path="res://misc/pools/projectile02_electric_bolt_pool/projectile02_electric_bolt_pool.gd" type="Script" id=21]
[ext_resource path="res://entities/projectiles/projectile_1_electric_shock/projectile_1_electric_shock.tscn" type="PackedScene" id=22]
[ext_resource path="res://misc/pools/gfx_death_pool/gfx_death_pool.tscn" type="PackedScene" id=23]
[ext_resource path="res://particles/death/death.tscn" type="PackedScene" id=24]
[ext_resource path="res://misc/pools/gfx_hit_pool/gfx_hit_pool.tscn" type="PackedScene" id=25]
[ext_resource path="res://particles/hit/hit.tscn" type="PackedScene" id=26]
[ext_resource path="res://misc/pools/gfx_hit_electricity_pool/gfx_hit_electricity_pool.tscn" type="PackedScene" id=27]
[ext_resource path="res://misc/pools/gfx_hit_electricity_pool/gfx_hit_electricity_pool.gd" type="Script" id=28]
[ext_resource path="res://particles/gfx_hit_electricity/gfx_hit_electricity.tscn" type="PackedScene" id=29]
[ext_resource path="res://entities/teleporter/teleporter.tscn" type="PackedScene" id=30]
[ext_resource path="res://images/black_hole.png" type="Texture" id=31]
[ext_resource path="res://scripts/spinner.gd" type="Script" id=32]
[ext_resource path="res://entities/teleporter/black_hole.tscn" type="PackedScene" id=33]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.403922, 0.745098, 0.627451, 1 )
metallic_specular = 0.38

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 31 )

[node name="game" type="Spatial"]

[node name="directional_light" type="DirectionalLight" parent="."]
transform = Transform( 0.404891, 0.600173, -0.689823, 0.182379, 0.68626, 0.70412, 0.895992, -0.410901, 0.168401, 0, 7.15272, 2.66095 )
light_color = Color( 0.709804, 0.709804, 0.709804, 1 )
light_energy = 1.5
shadow_enabled = true
shadow_bias = 16.0
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="minimap" parent="." groups=[
"death_listener",
"spawn_listener",
] instance=ExtResource( 3 )]
minimap_path = NodePath("../../game/minimap/minimap")

[node name="3d_gui" parent="." instance=ExtResource( 4 )]
camera_path = NodePath("../camera")

[node name="camera" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 0.752017, 0.659143, 0, -0.659143, 0.752017, 0.302906, 11.8738, 11.2036 )
visible = false
projection = 0
current = false
fov = 87.8
near = 3.78
far = 4820.0
target = NodePath("../world/player")

[node name="camera2" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.504307, 0.553978, -0.662407, 0.00530393, 0.765095, 0.643895, 0.863508, -0.328234, 0.382905, -13.1948, 12.7362, 7.38888 )
fov = 60.0
near = 3.78
far = 242.4
target = NodePath("../world/player")

[node name="debug_camera" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.07146, 0.570176, -0.818409, 0.0217084, 0.821201, 0.570226, 0.997207, 0.022982, -0.0710606, -12.3891, 5.79112, -2.25275 )
visible = false
projection = 0
current = false
fov = 60.0
near = 3.78
far = 242.4
target = NodePath("../world/player")

[node name="ground" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.253612, 0 )
chase_path = NodePath("../world/player")

[node name="environment" type="Spatial" parent="."]
visible = false

[node name="stars_layer_1" parent="environment" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0 )
amount = 1500
lifetime = 10.0
preprocess = 32.91
emission_sphere_radius = 100.0
flag_disable_z = true

[node name="stars_layer_2" parent="environment" instance=ExtResource( 8 )]
transform = Transform( -0.348196, -0.781535, -0.517651, 0.504619, -0.621639, 0.599103, -0.790012, -0.0526111, 0.61083, 0, -8.76161, 0 )
visible = false
angular_velocity = -0.866026

[node name="fog" parent="environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 33.5384, -32.9825, -24.6432 )
visible = false
lifetime = 10.0
preprocess = 600.0
flag_align_y = true
flag_rotate_y = true
scale_amount_curve = null

[node name="fog2" type="Spatial" parent="environment"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.12467, -16.5148, -20.2681 )

[node name="Sprite3D" type="Sprite3D" parent="environment/fog2"]
transform = Transform( 6, 0, 0, 0, -2.62268e-007, -4, 0, 6, -1.74846e-007, 0, 0, 0 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D4" type="Sprite3D" parent="environment/fog2"]
transform = Transform( -1.47067, 4.42696, 2.51565, 5.54085, -0.118832, 1.53259, 1.77092, 4.04819, -2.70604, 4.47927, -11.4699, -12.5448 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D2" type="Sprite3D" parent="environment/fog2"]
transform = Transform( 5.45748, -2.42988, -0.372132, 0.0726307, 1.49772, -3.87307, 2.49212, 5.27755, 0.927809, 0, 0, 27.9847 )
modulate = Color( 0.301961, 0.321569, 0.827451, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D3" type="Sprite3D" parent="environment/fog2"]
transform = Transform( 0.455383, 3.54757, 3.2116, 4.96266, -2.92231, 1.12193, 3.34136, 3.85679, -2.10402, 25.1272, -12.0241, 6.33648 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="fog3" type="Spatial" parent="environment"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.3907, -16.5148, 4.16251 )

[node name="Sprite3D" type="Sprite3D" parent="environment/fog3"]
transform = Transform( 6, 0, 0, 0, -2.62268e-007, -4, 0, 6, -1.74846e-007, 0, 0, 0 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D4" type="Sprite3D" parent="environment/fog3"]
transform = Transform( -1.47067, 4.42696, 2.51565, 5.54085, -0.118832, 1.53259, 1.77092, 4.04819, -2.70604, 4.47927, -11.4699, -12.5448 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D2" type="Sprite3D" parent="environment/fog3"]
transform = Transform( 5.45748, -2.42988, -0.372132, 0.0726307, 1.49772, -3.87307, 2.49212, 5.27755, 0.927809, 0, 0, 27.9847 )
modulate = Color( 0.301961, 0.321569, 0.827451, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D3" type="Sprite3D" parent="environment/fog3"]
transform = Transform( 0.455383, 3.54757, 3.2116, 4.96266, -2.92231, 1.12193, 3.34136, 3.85679, -2.10402, 25.1272, -12.0241, 6.33648 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="planet" type="Sprite3D" parent="environment"]
editor/display_folded = true
transform = Transform( 127.952, -3.24462, 1.33983, 2.40771, 116.669, 52.5988, -2.55453, -52.5538, 116.686, 0, -583.068, -511.839 )
material_override = SubResource( 1 )
shaded = true
double_sided = false
texture = ExtResource( 11 )

[node name="Sprite3D5" type="Sprite3D" parent="environment/planet"]
transform = Transform( 0.8422, 0.854512, -0.0150479, 0.336823, -0.360861, -0.729179, -0.785655, 0.761307, -0.328743, 0.136216, 1.23886, -0.332262 )
modulate = Color( 0.254902, 0.196078, 0.494118, 0.768627 )
texture = ExtResource( 10 )

[node name="environment2" type="Spatial" parent="."]

[node name="stars_layer_1" parent="environment2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0 )
amount = 1500
lifetime = 10.0
preprocess = 32.91
emission_sphere_radius = 100.0
flag_disable_z = true

[node name="stars_layer_2" parent="environment2" instance=ExtResource( 8 )]
transform = Transform( -0.348196, -0.781535, -0.517651, 0.504619, -0.621639, 0.599103, -0.790012, -0.0526111, 0.61083, 0, -8.76161, 0 )
visible = false
angular_velocity = -0.866026

[node name="fog" parent="environment2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 33.5384, -32.9825, -24.6432 )
visible = false
lifetime = 10.0
preprocess = 600.0
flag_align_y = true
flag_rotate_y = true
scale_amount_curve = null

[node name="fog2" type="Spatial" parent="environment2"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.12467, -16.5148, -20.2681 )

[node name="Sprite3D" type="Sprite3D" parent="environment2/fog2"]
transform = Transform( 6, 0, 0, 0, -2.62268e-007, -4, 0, 6, -1.74846e-007, 0, 0, 0 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D4" type="Sprite3D" parent="environment2/fog2"]
transform = Transform( -1.47067, 4.42696, 2.51565, 5.54085, -0.118832, 1.53259, 1.77092, 4.04819, -2.70604, 4.47927, -11.4699, -12.5448 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D2" type="Sprite3D" parent="environment2/fog2"]
transform = Transform( 5.45748, -2.42988, -0.372132, 0.0726307, 1.49772, -3.87307, 2.49212, 5.27755, 0.927809, 0, 0, 27.9847 )
modulate = Color( 0.301961, 0.321569, 0.827451, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D3" type="Sprite3D" parent="environment2/fog2"]
transform = Transform( 0.455383, 3.54757, 3.2116, 4.96266, -2.92231, 1.12193, 3.34136, 3.85679, -2.10402, 25.1272, -12.0241, 6.33648 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="fog3" type="Spatial" parent="environment2"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.3907, -16.5148, 4.16251 )

[node name="Sprite3D" type="Sprite3D" parent="environment2/fog3"]
transform = Transform( 6, 0, 0, 0, -2.62268e-007, -4, 0, 6, -1.74846e-007, 0, 0, 0 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D4" type="Sprite3D" parent="environment2/fog3"]
transform = Transform( -1.47067, 4.42696, 2.51565, 5.54085, -0.118832, 1.53259, 1.77092, 4.04819, -2.70604, 4.47927, -11.4699, -12.5448 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D2" type="Sprite3D" parent="environment2/fog3"]
transform = Transform( 5.45748, -2.42988, -0.372132, 0.0726307, 1.49772, -3.87307, 2.49212, 5.27755, 0.927809, 0, 0, 27.9847 )
modulate = Color( 0.301961, 0.321569, 0.827451, 1 )
texture = ExtResource( 10 )

[node name="Sprite3D3" type="Sprite3D" parent="environment2/fog3"]
transform = Transform( 0.455383, 3.54757, 3.2116, 4.96266, -2.92231, 1.12193, 3.34136, 3.85679, -2.10402, 25.1272, -12.0241, 6.33648 )
modulate = Color( 0.701961, 0.627451, 1, 1 )
texture = ExtResource( 10 )

[node name="planet" parent="environment2" instance=ExtResource( 12 )]
transform = Transform( 0.701832, 0.280686, -0.654712, 0.0188103, 0.911474, 0.410928, 0.712094, -0.300718, 0.634421, 122.398, -142.13, -90.0423 )

[node name="world" type="Spatial" parent="."]
script = ExtResource( 13 )
enemy_scenes = [ ExtResource( 14 ), ExtResource( 15 ) ]
player_path = NodePath("player")

[node name="player" parent="world" instance=ExtResource( 16 )]
collision_layer = 131073
camera_path = NodePath("../../camera2")

[node name="enemy_spawner" parent="world" instance=ExtResource( 17 )]

[node name="pools" type="Node" parent="world"]
editor/display_folded = true

[node name="projectile01_laser_pool" parent="world/pools" groups=[
"laser_pool",
] instance=ExtResource( 18 )]
objectToPool = ExtResource( 19 )

[node name="projectile02_electric_bolt_pool" parent="world/pools" instance=ExtResource( 20 )]
script = ExtResource( 21 )
objectToPool = ExtResource( 22 )

[node name="gfx_death_pool" parent="world/pools" instance=ExtResource( 23 )]
objectToPool = ExtResource( 24 )

[node name="gfx_hit_pool" parent="world/pools" instance=ExtResource( 25 )]
objectToPool = ExtResource( 26 )

[node name="gfx_hit_electricity_pool" parent="world/pools" instance=ExtResource( 27 )]
script = ExtResource( 28 )
objectToPool = ExtResource( 29 )

[node name="teleporter" parent="world" instance=ExtResource( 30 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.253319, 0.256489, -12.3389 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1.09554, 0, 0, 0, 1.04663, 0, 0, 0, 1, -14.1067, 0, 0 )
visible = false
material_override = SubResource( 5 )
modulate = Color( 0, 0.670588, 1, 1 )
pixel_size = 0.04
texture = ExtResource( 31 )
script = ExtResource( 32 )
should_spin = true
spin_axis = "z"

[node name="black_hole" parent="." instance=ExtResource( 33 )]
visible = false
angular_velocity = -0.0363764
[connection signal="spawn_electric_bolt_projectile" from="world" to="world/pools/projectile02_electric_bolt_pool" method="_on_world_spawn_electric_bolt_projectile"]
[connection signal="spawn_gfx_death" from="world" to="world/pools/gfx_death_pool" method="_on_world_spawn_gfx_death"]
[connection signal="spawn_gfx_hit" from="world" to="world/pools/gfx_hit_pool" method="_on_world_spawn_gfx_hit"]
[connection signal="spawn_gfx_hit_electricity" from="world" to="world/pools/gfx_hit_electricity_pool" method="_on_world_spawn_gfx_hit_electricity"]
[connection signal="spawn_laser_projectile" from="world" to="world/pools/projectile01_laser_pool" method="_on_world_spawn_laser_projectile"]
[connection signal="hit" from="world/player" to="world" method="on_entity_hit"]
[connection signal="hit_electricity" from="world/player" to="world" method="on_entity_hit_electricity"]
[connection signal="shoot" from="world/player" to="world" method="on_entity_shoot"]
[connection signal="teleport_jump" from="world/teleporter" to="world" method="_on_teleporter_teleport_jump"]
